<resources>
    <string name="app_name">Taxi App</string>
    <!-- Used in NavigationDrawer -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Used in NavigationDrawer -->
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="history">History</string>
    <string name="help">Help</string>
    <string name="Payment">Payment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Message in fragment -->
    <string name="message_help">Nous pourrions afficher help ici ?</string>
    <string name="message_history">Nous pourrions afficher history ici ?</string>
    <string name="message_notifications">Nous pourrions afficher notifications ici ?</string>
    <string name="message_payment">Nous pourrions afficher payment ici ?</string>
    <string name="message_settings">Nous pourrions afficher settings ici ?</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="name">Mandat Malincov</string>
    <string name="profile">Edit Profile</string>


</resources>
