<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/activity_main_drawer_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/home" />
        <item
            android:id="@+id/activity_main_drawer_payment"
            android:icon="@drawable/ic_baseline_payment_24"
            android:title="@string/Payment" />
        <item
            android:id="@+id/activity_main_drawer_history"
            android:icon="@drawable/ic_baseline_history_24"
            android:title="@string/history" />
        <item
            android:id="@+id/activity_main_drawer_notifications"
            android:icon="@drawable/ic_baseline_notifications_24"
            android:title="@string/notifications" />

        <item
            android:id="@+id/activity_main_drawer_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/settings" />
        <item
            android:id="@+id/activity_main_drawer_help"
            android:icon="@drawable/ic_baseline_help_24"
            android:title="@string/help" />
        <item
            android:id="@+id/activity_main_drawer_logout"
            android:icon="@drawable/ic_baseline_login_24"
            android:title="@string/logout" />
    </group>



</menu>
